@@ -79,7 +79,8 @@ Interface changes
   add an activeone argument to specify whether the indicator constraint should be activated on 0 or 1.
 - added SCIPmarkDoNotAggrVar() to mark that a variable should not be aggregated
 - added SCIPdoNotAggrVar() to query whether a variable should not be aggregated
-- added SCIPdecompGetNBorderVars() and SCIPdecompGetNBorderConss()
+- added SCIPdecompGetNBorderVars() and SCIPdecompGetNBorderConss() to get number of border variables/constraints
+- added SCIPdecompGetVarsSize() and SCIPdecompGetConssSize() to get variable/constraint size for each block of a decomposition
 
 ### Command line interface
 ### Interfaces to external software
